--- a/contactenos.html
+++ b/contactenos.html
@@ -9,16 +9,51 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/contactenos.css">
     <title>Contactenos</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="img/HOTEL BIT.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+        integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
 
+    <div class="contacto container-fluid d-flex justify-content-center" style="background-color: #73C2FB;">
+        <p class="numero me-4">(57)3124845800</p>
+        <i class="fa-solid fa-location-dot"></i>
+        <p>San Andrés Isla, Colombia</p>
     </div>
-    <div class="con">
-        <h3>Contacto</h3>
+    <div class="main container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light align-items-end" style="background-color: #225dba	;">
+            <div class="container-fluid ">
+                <img class="logo hvr-bounce-in " src="/img/LOGO HOTEL BIT.png" alt="FD ">
+                <div class="collapse navbar-collapse text-decoration-underline" id="navbarNavDropdown">
+                    <ul class="navbar-nav me-4">
+                        <li class="nav-item ">
+                            <a class="nav-link active hvr-grow-shadow text-white" aria-current="page " href="inicio.html">Inicio</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link active hvr-underline-from-center text-white  " href="habitaciones.html">Habitaciones</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link active hvr-underline-from-center text-white" href="reservas.html">Reserva</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link active hvr-underline-from-center text-white" href="nosotros.html">Nosotros</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </div>
+
+
     <h3 class="formulario d-flex justify-content-center mt-3">Contacto</h3>
-    <div class="container d-flex justify-content-center align-items-center flex-column">
+    <div class="container d-flex justify-content-center align-items-center flex-column mb-5">
         <form action="" class=" mt-3 w-50 ">
             <input type="email" class="form-control" id="email" placeholder="Nombre">
             <br>
@@ -37,87 +72,86 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-</body>
-<footer class="text-center text-lg-start bg-light text-muted">
 
-    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-        <div class="me-5 d-none d-lg-block">
-            <span>Contactanos a través de nuestras redes:</span>
-        </div>
+    <footer class="text-center text-lg-start bg-dark text-white text-muted ">
 
-        <div class="contacto d-flex">
-            <p>Siguenos :</p>
-            <a href="#" class="me-4 text-reset">
-                <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-twitter"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-google"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-github"></i>
-            </a>
-        </div>
-    </section>
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom  text-white">
+            <div class="me-5 d-none d-lg-block ">
+                <span>Contactanos a través de nuestras redes:</span>
+            </div>
 
-    <section class="">
-        <div class="container text-center text-md-start mt-5">
-            <div class="row mt-3">
-                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <div class="contacto d-flex  ">
+                <p>Siguenos :</p>
+                <a href="# " class="me-4 text-reset ">
+                    <i class="fab fa-facebook-f "></i>
+                </a>
+                <a href=" " class="me-4 text-reset ">
+                    <i class="fab fa-twitter "></i>
+                </a>
+                <a href=" " class="me-4 text-reset ">
+                    <i class="fab fa-google "></i>
+                </a>
+                <a href=" " class="me-4 text-reset ">
+                    <i class="fab fa-instagram "></i>
+                </a>
+                <a href=" " class="me-4 text-reset ">
+                    <i class="fab fa-linkedin "></i>
+                </a>
+                <a href=" " class="me-4 text-reset ">
+                    <i class="fab fa-github "></i>
+                </a>
+            </div>
+        </section>
 
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        <i class="fas fa-gem me-3"></i>Hotel BIT
-                    </h6>
-                    <p>
-                        Hotel Bit como pagina preferida para realizar y cumplir todos tus viajes soñados.
-                    </p>
-                </div>
+        <section class="">
+            <div class="container text-center text-md-start mt-5 text-white ">
+                <div class="row mt-3 ">
+                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 ">
+                        <h6 class="text-uppercase fw-bold mb-4 ">
+                            <i class="fas fa-gem me-3 "></i>Hotel BIT
+                        </h6>
+                        <p>
+                            Hotel Bit como pagina preferida para realizar y cumplir todos tus viajes soñados.
+                        </p>
+                    </div>
 
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 ">
+                        <h6 class="text-uppercase fw-bold mb-4 ">
+                            Productos
+                        </h6>
+                        <p>
+                            <a href="#! " class="text-reset ">Hotel</a>
+                        </p>
+                        <p>
+                            <a href="#! " class="text-reset ">Reservas</a>
+                        </p>
+                        <p>
+                            <a href="#! " class="text-reset ">Habitaciones</a>
+                        </p>
+                        <p>
+                            <a href="#! " class="text-reset "></a>
+                        </p>
+                    </div>
 
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        Productos
-                    </h6>
-                    <p>
-                        <a href="#!" class="text-reset">Hoteles</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Reservas</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Habitaciones</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset"></a>
-                    </p>
-                </div>
-
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        Contacto
-                    </h6>
-                    <p><i class="fas fa-home me-3"></i>Bogota, Colombia</p>
-                    <p>
-                        <i class="fas fa-envelope me-3"></i> hotelbit@info.com
-                    </p>
-                    <p><i class="fas fa-phone me-3"></i> +57 312 484 4508</p>
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 ">
+                        <h6 class="text-uppercase fw-bold mb-4 ">
+                            Contacto
+                        </h6>
+                        <p><i class="fas fa-home me-3 "></i>San Andrés Isla, Colombia</p>
+                        <p>
+                            <i class="fas fa-envelope me-3 "></i> <a href="contactenos.html">Contactanos</a>
+                        </p>
+                        <p><i class="fas fa-phone me-3 "></i> +57 312 484 4508</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-        © 2022 Copyright: Hotel Bit
-    </div>
-</footer>
+        <div class="text-center p-4 " style="background-color: rgba(0, 0, 0, 0.05); ">
+            © 2022 Copyright: Hotel Bit
+        </div>
+    </footer>
+</body>
+
 
 </html>
